--- a/html/login.html
+++ b/html/login.html
@@ -57,7 +57,10 @@
                 </div>
                 <div>
                 <button type="submit" class="btn btn-primary ">Enviar</button>
-                <a href="/">Não tem uma conta?</a></div>
+                <a href = "#">Não tem uma conta?</a>
+                <br>
+                <a href = "recuperacaoSenha.html">Esqueceu a senha?</a>
+                </div>
             </form>
             </div>
         
