criação pagina de notificação email

--- a/html/recuperacaoSenha.html
+++ b/html/recuperacaoSenha.html
@@ -46,7 +46,7 @@
         </div>
     </div>
       <div>
-        <button type="submit" class="btn btn-primary">Recuperar senha</button> 
+        <a href = "notificacaoEmail.html"><button type="button" class="btn btn-primary" href="notificacaoEmail.htmls">Recuperar senha</button></a>
       </div> 
     </form>
   
