--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
+        <li class = "nav-tem">
+          <a class="nav-link" href="./html/sobreServico.html">Sobre serviço</a>
+        </li>
         <li class="nav-item nav-pills">
           <a class="nav-link active" href="./html/login.html">Login</a>
         </li>
