inserção de link no button de confirmar codigo

--- a/html/notificacaoEmail.html
+++ b/html/notificacaoEmail.html
@@ -13,7 +13,7 @@
          <h3>Soliticação de recuperação de senha enviada!</h3>
          <p>Confirme o código enviado em seu email:</p>
          <input type="text"> </input>
-         <input id="botao-card-msg-email" type="submit" value="Confirmar código"></input>
+       <a href="../index.html"> <input id="botao-card-msg-email" type="submit" value="Confirmar código"></a></input>
     </div>
     </div>
 </body>
