--- a/html/recuperacaoSenha.html
+++ b/html/recuperacaoSenha.html
@@ -20,7 +20,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
+            <li class = "nav-tem">
+              <a class="nav-link" href=".sobreServico.html">Sobre serviço</a>
+            </li>
 
             <li class="nav-item nav-pills">
               <a class="nav-link active" href="login.html">Login</a>
