--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <style src="assets/css/style.css"></style>
 </head>
 
-<body >
+<body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Plantinhas</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -21,7 +21,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class = "nav-tem">
+        <li class="nav-tem">
           <a class="nav-link" href="./html/sobreServico.html">Sobre serviço</a>
         </li>
         <li class="nav-item nav-pills">
@@ -32,11 +32,10 @@
   </nav>
 
   <!--Primeria row-->
-  <div class="container shadow-lg p-3 mb-5 rounded" >
+  <div class="container shadow-lg p-3 mb-5 rounded">
     <div>
       <h1 class="mt-5 text-center">Titulo</h1>
     </div>
-
     <div class="row mt-3">
       <div class="col-md-6">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
@@ -55,27 +54,24 @@
       </div>
     </div>
     <!--Primeria row-->
+
     <!--Segunda row-->
     <div class="row container">
       <div class="col-md-6 mt-5">
-      <a href="./html/listaDeEspera.html"><button type="button" class="btn btn-secondary btn-lg btn-block">Entre na nossa lista de espera</button> </a> 
-
+        <a style="text-decoration:none;" href="./html/listaDeEspera.html"><button type="button"
+            class="  btn btn-secondary btn-lg btn-block">Entre na nossa lista de espera</button></a>
         <div class="row justify-content-center ">
           <div class="col-md-6 mt-1">
             <img src="assets/img/canva1.png" alt="..." class="img-thumbnail">
           </div>
-
-          <div class="col-md-6 mt-1" style="width: 16rem;">
-            <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
+          <div class="col-md-6 mt-1" style="width: 16rem;"><img src="assets/img/canva2.png" alt="..."
+              class="img-thumbnail">
           </div>
         </div>
-
-
         <div class="row justify-content-center">
           <div class="col-md-6 mt-1" style="width: 16rem;">
             <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
           </div>
-
           <div class="col-md-6 mt-1" style="width: 16rem;">
             <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
           </div>
@@ -119,55 +115,44 @@
   <!-- Carrossel -->
   <!--Segunda row-->
 
-
-
-
   <!--Terceira row/ Sobre nós-->
-
-  
   <div class="container-fluid shadow-lg p-3 mb-5 rounded" style="background-color: rgba(194, 181, 207, 0.465);">
-    
     <div>
       <h1 class=" text-center">Sobre nós</h1>
     </div>
-    
-    <div class="row  mt-3">
+    <div class="row mt-3">
       <div class="col-md-6">
         <div class="row justify-content-center ">
-          <div class="col-md-6 mt-1">
-            <img src="assets/img/canva1.png" alt="..." class="img-thumbnail mt-4">
+          <div class="col-md-3 mt-1">
+            <img style="border-radius:100% ;" src="assets/img/1.png" alt="..." class="img-thumbnail mt-4">
           </div>
         </div>
-
         <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi
           recusandae dolore
           quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
         </p>
-
-        <div class=" align-items-center mt-4">
-          <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
-
-          <img src="assets/img/logotipo-do-github.png" alt="" width="40px">
-
+        <div class="row justify-content-center">
+          <div class=" align-items-center mt-3">
+            <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
+            <img class="ml-3" src="assets/img/logotipo-do-github.png" alt="" width="40px">
+          </div>
         </div>
-
       </div>
       <div class="col-md-6">
         <div class="row justify-content-center  ">
-          <div class="col-md-6 mt-1">
-            <img src="assets/img/canva1.png" alt="..." class=" img-thumbnail mt-4">
+          <div class="col-md-3 mt-1">
+            <img style="border-radius:100% ;" src="assets/img/2.png" alt="..." class=" img-thumbnail mt-4">
           </div>
         </div>
         <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi
           recusandae dolore
           quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
         </p>
-
-        <div class=" align-items-center mt-4">
-          <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
-
-          <img src="assets/img/logotipo-do-github.png" alt="" width="40px">
-
+        <div class="row justify-content-center">
+          <div class=" align-items-center mt-3 ">
+            <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
+            <img class="ml-3" src="assets/img/logotipo-do-github.png" alt="" width="40px">
+          </div>
         </div>
       </div>
     </div>
@@ -177,10 +162,6 @@
       </p>
     </div>
   </div>
-
-
-
-
   <!--Terceira row/ Sobre nós-->
 
   <!-- Footer -->
@@ -202,7 +183,5 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 </body>
-
-
 
 </html>
