Valida e-mail e senha

--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -40,11 +40,13 @@
     <div class="container form-row">
       <div class="form-group col-md-6">
         <label for="inputEmail"> Email</label>
-        <input name="email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+        <input onkeyup="validaEmail()" name="email" type="email" class="form-control" id="email" placeholder="Email">
+        <div id="txtEmail"></div>
       </div>
       <div class="form-group col-md-6">
-        <label for="inputPassword4">Password</label>
-        <input name="senha" type="password" class="form-control" id="inputPassword4" placeholder="Password">
+        <label  for="inputPassword4">Password</label>
+        <input onkeyup="validaSenha()" name="senha" type="password" class="form-control" id="senha" placeholder="Password">
+        <div id="txtSenha"></div>
       </div>
       <div class="form-group col-md-6">
         <label for="inputCep"> CEP</label>
@@ -90,6 +92,7 @@
   </footer>
   <!-- Footer -->
 
+  <script src="../assets/js/valida.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
