--- a/html/login.html
+++ b/html/login.html
@@ -38,12 +38,14 @@
             <form class="col-md-9 shadow-lg p-3 mb-5 bg-white rounded ">
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                        placeholder="Digite seu email">
+                    <input onkeyup="validaEmail()" type="email" class="form-control" id="email" aria-describedby="emailHelp"
+                        placeholder="Digite seu email" >
+                        <div id='txtEmail'></div>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Senha</label>
-                    <input type="Senha" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+                    <input onkeyup="validaSenha()" type="Senha" class="form-control" id="senha" placeholder="Senha">
+                <div id='txtSenha'></div>
                 </div>
                 <div>
                     <button type="submit" class="btn btn-primary ">Enviar</button>
@@ -71,6 +73,7 @@
     </footer>
     <!-- Footer -->
 
+<script src="../assets/js/valida.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
