--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -8,11 +8,12 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </link>
-
+  <script src="../assets/js/validaCep.js" defer > </script>
   <title>Projeto: plantinha</title>
 </head>
 
 <body>
+  <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="../index.html">Plantinhas</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -52,8 +53,8 @@
       </div>
 
       <div class="form-group col-md-6">
-        <label for="inputAddress">Rua</label>
-        <input name="rua" type="text" class="form-control" id="inputAddress" placeholder="rua">
+        <label for="inputRua">Rua</label>
+        <input name="rua" type="text" class="form-control" id=" " placeholder="rua">
       </div>
       <div class="form-group col-md-6">
         <label for="inputBairro">Bairro</label>
@@ -70,7 +71,7 @@
       </div>
 
     </div>
-
+    
     <div class=" ml-3 form-group">
       <div class="form-check">
         <input class="form-check-input" type="checkbox" id="gridCheck">
@@ -79,7 +80,8 @@
         </label>
       </div>
     </div>
-    <button type="submit" class="btn btn-primary ml-3">Cadastrar</button>
+    <input type="button" class="btn btn-primary ml-3"  id="botao-cadastrar" value="Cadastrar"></input>
+    
   </form>
   <!-- Footer -->
   <footer class=" pt-4 bg-light">
@@ -99,6 +101,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+
+<!-- AJAX SCRIPT-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
