--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -56,7 +56,7 @@
 
       <div class="form-group col-md-6">
         <label for="inputRua">Rua</label>
-        <input name="rua" type="text" class="form-control" id=" " placeholder="rua">
+        <input name="rua" type="text" class="form-control" id="inputRua" placeholder="rua">
       </div>
       <div class="form-group col-md-6">
         <label for="inputBairro">Bairro</label>
