Valida recuperação de senha

--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -36,7 +36,7 @@
   </header>
   <h2 class="text-center mb-4 mt-4">Cadastro lista de espera</h2>
 
-  <form class="shadow-lg p-3 mb-5 bg-white rounded">
+  <form class="shadow-lg p-3 mb-5 bg-white rounded" style="height: 100vh !important" >
     <div class="container form-row">
       <div class="form-group col-md-6">
         <label for="inputEmail"> Email</label>
@@ -84,9 +84,10 @@
     <button type="submit" class="btn btn-primary ml-3">Cadastrar</button>
   </form>
   <!-- Footer -->
-  <footer class=" pt-4 bg-light">
+
+  <footer  class=" pt-4 bg-light">
     <hr>
-    <div class="text-center pb-3">© 2022 Copyright:
+    <div  class="text-center pb-3">© 2022 Copyright:
       <a href="/"> Resilia</a>
     </div>
   </footer>
