--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projeto: plantinha</title>
+  <title>Projeto: Extraordinary </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </link>
@@ -14,7 +14,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Plantinhas</a>
+    <a class="navbar-brand" href="#">Extraordinary</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -34,22 +34,19 @@
   <!--Primeria row-->
   <div class="container shadow-lg p-3 mb-5 rounded">
     <div>
-      <h1 class="mt-5 text-center">Titulo</h1>
+      <h1 class="mt-5 text-center">Extraordinary</h1>
     </div>
     <div class="row mt-3">
       <div class="col-md-6">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
-          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
-        </p>
+        <h3>Olá, bem vindo à extraordinary. A plataforma que irá te auxiliar nos estudos da engenharia de software e ciências da computação.
+        </h3>
       </div>
       <div class="col-md-6">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
-          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        <p>Somos uma equipe de desenvolvedores, que preza pelo ensino de qualidade. Temos como objetivo facilitar as formas de aprendizagem, por isso, desenvolvemos uma platarforma para auxiliar novos profissionais e entusiastas da área de tecnologia.
         </p>
       </div>
-      <div class="mt-5 container col-md-9">
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
-          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+      <div class="mt-5 container col-md-9 text-center">
+        <p>Nossa plataforma está em implementação. Te convidamos para entrar na lista de espera e não perder as atualizações.
         </p>
       </div>
     </div>
@@ -62,20 +59,14 @@
             class="  btn btn-secondary btn-lg btn-block">Entre na nossa lista de espera</button></a>
         <div class="row justify-content-center ">
           <div class="col-md-6 mt-1">
-            <img src="assets/img/canva1.png" alt="..." class="img-thumbnail">
+            <img src="assets/img/curso1.png" alt="..." class="img-thumbnail">
+            <p class="text-center">Ciências da Computação</p>
           </div>
-          <div class="col-md-6 mt-1" style="width: 16rem;"><img src="assets/img/canva2.png" alt="..."
+          <div class="col-md-6 mt-1" style="width: 16rem;"><img src="assets/img/curso2.png" alt="..."
               class="img-thumbnail">
+              <p class="text-center">Engenharia de Software</p>
           </div>
-        </div>
-        <div class="row justify-content-center">
-          <div class="col-md-6 mt-1" style="width: 16rem;">
-            <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
-          </div>
-          <div class="col-md-6 mt-1" style="width: 16rem;">
-            <img src="assets/img/canva2.png" alt="..." class="img-thumbnail">
-          </div>
-        </div>
+        </div> 
       </div>
 
       <!-- Carrossel -->
@@ -127,13 +118,11 @@
             <img style="border-radius:100% ;" src="assets/img/1.png" alt="..." class="img-thumbnail mt-4">
           </div>
         </div>
-        <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi
-          recusandae dolore
-          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        <p class="mt-4 text-center">Estudante da Resilia, cursando Análise e Desenvolvimento de Sistemas e desenvolvedora da Extraordinary
         </p>
         <div class="row justify-content-center">
           <div class=" align-items-center mt-3">
-            <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
+            <a href= "https://www.linkedin.com/in/luanaassisi"><img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px"></a>
             <img class="ml-3" src="assets/img/logotipo-do-github.png" alt="" width="40px">
           </div>
         </div>
@@ -144,21 +133,18 @@
             <img  style="border-radius:100% ;" src="assets/img/2.png" alt="..." class=" img-thumbnail mt-4">
           </div>
         </div>
-        <p class="mt-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi
-          recusandae dolore
-          quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+        <p class=" text-center mt-4">Estudante da Resilia, cursando ciências da computação e desenvolvedora da Extraordinary
         </p>
         <div class="row justify-content-center">
           <div class=" align-items-center mt-3 ">
-            <img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px">
+            <a href= "https://www.linkedin.com/in/camily-albres-180892236"><img src="assets/img/logotipo-do-linkedin.png" alt="" width="40px"></a>
             <img class="ml-3" src="assets/img/logotipo-do-github.png" alt="" width="40px">
           </div>
         </div>
       </div>
     </div>
-    <div class="mt-4 pb-4 container col-md-9">
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, reiciendis sed excepturi recusandae dolore
-        quod voluptates rem cumque, delectus eaque fuga autem tempora, ratione quas quibusdam vel officiis fugiat eum.
+    <div class=" text-center mt-4 pb-4 container col-md-9">
+      <p>Desenvolvido com amor ♥
       </p>
     </div>
   </div>
