--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -9,13 +9,13 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   </link>
   <script src="../assets/js/validaCep.js" defer > </script>
-  <title>Projeto: plantinha</title>
+  <title>Extraordinary</title>
 </head>
 
 <body>
   <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../index.html">Plantinhas</a>
+    <a class="navbar-brand" href="../index.html">Extraordinary</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
