--- a/html/notificacaoEmail.html
+++ b/html/notificacaoEmail.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/css/style.css"> </link>
-    <title>Projeto: Plantinhas</title>
+    <title>Extraordinary</title>
 </head>
 <body>
     <div class="container-card-msg-email"> 
