--- a/html/recuperacaoSenha.html
+++ b/html/recuperacaoSenha.html
@@ -10,12 +10,12 @@
   </link>
   <link rel="stylesheet" href="../assets/css/style.css">
   </link>
-  <title>Projeto: plantinha</title>
+  <title>Extraordinary</title>
 </head>
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="../index.html">Plantinhas</a>
+    <a class="navbar-brand" href="../index.html">Extraordinary</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
