--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     </div>
     <div class="row mt-3">
       <div class="col-md-6">
-        <h3>Olá, bem vindo à extraordinary. A plataforma que irá te auxiliar nos estudos da engenharia de software e ciências da computação.
+        <h3>Olá, bem-vindo à extraordinary. A plataforma que irá te auxiliar nos estudos de engenharia de software e ciências da computação, de uma forma divertida, interativa e visual.
         </h3>
       </div>
       <div class="col-md-6">
-        <p>Somos uma equipe de desenvolvedores, que preza pelo ensino de qualidade. Temos como objetivo facilitar as formas de aprendizagem, por isso, desenvolvemos uma platarforma para auxiliar novos profissionais e entusiastas da área de tecnologia.
+        <p>Somos uma dupla de desenvolvedoras, que preza pelo ensino de qualidade. Temos como objetivo facilitar as formas de aprendizagem, por isso, desenvolvemos uma platarforma para auxiliar novos profissionais e entusiastas da área de tecnologia.
         </p>
       </div>
       <div class="mt-5 container col-md-9 text-center">
@@ -98,7 +98,7 @@
           </a>
         </div>
         <div class="text-center">
-          <h3 class="bp-3 mt-2">texto!</h3>
+          <h3 class="bp-3 mt-2">Extraordinary!</h3>
         </div>
       </div>
     </div>
