--- a/html/listaDeEspera.html
+++ b/html/listaDeEspera.html
@@ -26,7 +26,7 @@
           <a class="nav-link" href="sobreServico.html">Sobre serviço</a>
         </li>
         <li class="nav-item nav-pills">
-          <a class="nav-link active" href="#">Login</a>
+          <a class="nav-link active" href="login.html">Login</a>
         </li>
       </ul>
     </div>
