--- a/html/login.html
+++ b/html/login.html
@@ -52,7 +52,7 @@
                     <br>
                     <div class="mt-3">
                         <a href="recuperacaoSenha.html">Esqueceu a senha?</a>
-                        <a class="ml-5" href="#">Não tem uma conta?</a>
+                        <a class="ml-5" href="listaDeEspera.html">Não tem uma conta?</a>
                     </div>
                 </div>
             </form>
