--- a/html/sobreServico.html
+++ b/html/sobreServico.html
@@ -32,36 +32,8 @@
   <div class="container shadow-lg p-3 mb-5 rounded">
     <div>
       <h3 class="mt-5 mb-3 text-center">Mais um pouco sobre a Extraordinary</h3>
-      <h3 class="mb-4 text-center">Nossos ideais:</h3>
-    </div>
-    <div class="row text-center mt-3">
-      <div class="col-md-3">
-        <h3>01</h3>
-        <h4>QUALIDADE</h4>
-        <p>Prezamos pela qualidade do nosso curso, com professores referentes no assunto.
-        </p>
-      </div>
-      <div class="col-md-3">
-        <h3>02</h3>
-        <h4>IGUALDADE</h4>
-        <p>Todos devem ter acesso ao ensino de qualidade.
-        </p>
-      </div>
-      <div class="col-md-3">
-        <h3>03</h3>
-        <h4>LUDICIDADE</h4>
-        <p>O conteúdo deve ser apresentado de uma maneira divertida e lúdica para o aprendizado ser eficiente.
-        </p>
-      </div>
-      <div class="col-md-3">
-        <h3>04</h3>
-        <h4>ACESSIBILIDADE</h4>
-        <p>Gratuidade dos conteúdos e multiplataforma do nosso serviço.
-        </p>
-      </div>
-      
       <div class="mt-5 mb-4 container col-md-9 text-center">
-        <h5>Somos para todos, nossa plataforma é essencialmente gratuita, mas disponibilizamos três planos de assinatura:</h5>
+        <h5>Extraordinary é uma plataforma gratuita voltada para o ensino da ciência da computação e engenharia de software. Nosso serviço gratuito é possível graças ao sistema de vidas diárias e propagandas voltadas para a área da ti . Assim, o aluno tem acesso a toda a plataforma sem gastar dinheiro. Além disso, também possuímos  o serviço pago para aqueles que desejam possuir vida ilimitada e ajudar na manunteção financeira da plataforma.</h5>
       </div>
     </div>
 
