--- a/index.html
+++ b/index.html
@@ -147,6 +147,33 @@
       <p>Desenvolvido com amor ♥
       </p>
     </div>
+    <h3 class="mb-4 text-center">Nossos ideais:</h3>
+  </div>
+  <div class="row container text-center mt-3">
+    <div class="col-md-3">
+      <h3>01</h3>
+      <h4>QUALIDADE</h4>
+      <p>Prezamos pela qualidade do nosso curso, com professores referentes no assunto.
+      </p>
+    </div>
+    <div class="col-md-3">
+      <h3>02</h3>
+      <h4>IGUALDADE</h4>
+      <p>Todos devem ter acesso ao ensino de qualidade.
+      </p>
+    </div>
+    <div class="col-md-3">
+      <h3>03</h3>
+      <h4>LUDICIDADE</h4>
+      <p>O conteúdo deve ser apresentado de uma maneira divertida e lúdica para o aprendizado ser eficiente.
+      </p>
+    </div>
+    <div class="col-md-3">
+      <h3>04</h3>
+      <h4>ACESSIBILIDADE</h4>
+      <p>Gratuidade dos conteúdos e multiplataforma do nosso serviço.
+      </p>
+    </div>
   </div>
   <!--Terceira row/ Sobre nós-->
 
